metrics-monitoring/grafana/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-auth
  namespace: monitoring
spec:
  basicAuth: # htpasswd -nb admin testpassword
    secret: |
      admin:$apr1$P0g2ujdA$Ps.DTTvKRL9ktYcLA7YZf.
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.example.com`)
      kind: Rule
      services:
        - name: prometheus-grafana
          port: 80
      #middlewares:
      #  - name: grafana-auth
